2022-10-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): coders/xpm.c (ReadXPMImage): Use
	qsort+bsearch to improve performance of color-lookups.

2022-11-01  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/wpg.c Bilevel image must be allways monochrome.
        Discard palette if exists.
	* PerlMagick/t/input1_1.wpg
	* PerlMagick/t/reference/read/input1_1.wpg.miff New testcase
        with bilevel monochrome image.
	* PerlMagick/t/read.t: Added input1_1.wpg to PerlMagick test suite.

2022-10-31  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/xpm.c (ReadXPMImage): Output intelligent messag when colormap 
        exceeds limit.

2022-10-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (ReadBlobString): Fix oss-fuzz issue 52917
	"graphicsmagick:coder_TXT_fuzzer: Stack-buffer-overflow in
	ReadBlobString", which occurs due to a bug added in yesterday's
	ReadBlobString() changes.

2022-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (ReadBlobString): Use fgets() in order to get much
	better performance.

2022-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Improve read performance by using
	integer keys.  Trace the colormap.

2022-10-29  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/xpm.c (ReadXPMImage): Replace strcmp with faster memcmp.
        It improves 21% performance on my test image.

2022-10-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Eliminate unnecessary strlen() upon
	memory reallocation for better performance.

2022-10-29  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* PerlMagick/t/input_bilevel.xpm
	* PerlMagick/t/reference/read/input_xpm_bilevel.miff New testcase
        with bilevel monochrome image.
	* PerlMagick/t/read.t: Added input_xpm_pal16.miff to PerlMagick test
	suite.

2022-10-28  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* PerlMagick/t/input_pal16.xpm