@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x272400
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 27,24,0
-#define MagickChangeDate   "20221031"
-#define MagickReleaseDate  "snapshot-20221031"
+#define MagickChangeDate   "20221101"
+#define MagickReleaseDate  "snapshot-20221101"
 
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
